# tf_tutorial

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebook/: .gitignore  advanced.ipynb  beginner.ipynb  classification.ipynb  csv.ipynb  images.ipynb  keras_tuner.ipynb  numpy.ipynb  overfit_and_underfit.ipynb  pandas_dataframe.ipynb  regression.ipynb  save_and_load.ipynb  tensor.ipynb  text.ipynb  text_classification.ipynb  text_classification_with_hub.ipynb  tf_test.ipynb  tfrecord.ipynb  unicode.ipynb
