[tool.poetry]
name = "tf_tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
pandas = "^1.2.4"
fastparquet = "^0.5.0"
python-snappy = "^0.6.0"
matplotlib = "^3.4.1"
scikit-learn = "^0.24.2"
tensorflow-hub = "^0.12.0"
tensorflow-datasets = "^4.3.0"
ipywidgets = "^7.6.3"
jupyter = "^1.0.0"
IProgress = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.812"
isort = "^5.8.0"
black = "^21.5b0"
flake8 = "^3.9.1"
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
